@@ -1,3 +1,8 @@
+2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add Kineo Makefile rules.
+	* kineo.mk: New.
+
 2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Detect doxygendocdir in roboptim-core.
